# TripCok_models

./: .gitignore  README.md  api_caller2.py  changed.csv  crawly.py  func.py  install_requirements  lists.csv  makedir.py  pip_requirements.txt  pyproject.toml  t3.py  t4.py
csv_maker/: category.csv  changed.csv  func.py  func2.py
src/tripcok_models/: .gitignore
src/tripcok_models/csv_maker/: .attacher5_kim.py.swp  .saved_5_backup.csv.swp  attacher5.py  attacher5_clean.py  attacher5_kim.py  keylib.py  paginator_5.py  ~
src/tripcok_models/csv_maker/_batch/: batch_0.csv  batch_3.csv
src/tripcok_models/csv_maker/batch/: .batch_27.csv.swp  batch_0.csv  batch_1.csv  batch_10.csv  batch_100.csv  batch_101.csv  batch_102.csv  batch_103.csv  batch_104.csv  batch_105.csv  batch_106.csv  batch_107.csv  batch_108.csv  batch_11.csv  batch_111.csv  batch_112.csv  batch_113.csv  batch_114.csv  batch_115.csv  batch_116.csv  batch_117.csv  batch_118.csv  batch_119.csv  batch_12.csv  batch_120.csv  batch_121.csv  batch_122.csv  batch_123.csv  batch_124.csv  batch_125.csv  batch_126.csv  batch_127.csv  batch_128.csv  batch_129.csv  batch_13.csv  batch_130.csv  batch_131.csv  batch_132.csv  batch_133.csv  batch_134.csv  (+425 more)
src/tripcok_models/csv_maker/batch1/: batch_0.csv  batch_1.csv  batch_2.csv
src/tripcok_models/models/: kobert1.py  kobert2.py  kobert3.py  kobert_batching1.py  model1.py  model3.py  pipeline2.py  place_recom.py  random_query_generator.py  recommender.py  semantic.py  semantic2.py  semantic_search1.py  semantic_search2.py  tripcock_model.py  tripcock_model_api.py  tripcock_recommender.py  tripcok_model_api.py
src/tripcok_models/models/tmp/: konlpy1.py  (+3 more)
src/tripcok_models/parquet/: partition_1.parquet  partition_4.parquet  partition_5.parquet  partition_6.parquet  partition_7.parquet
src/tripcok_models/worker/: ALC.py  ALP.py  README.md  category.csv  request_utils.py  trans.py
tmp/: .test_koreantravel.csv.swp  test2.csv  test_koreantravel.csv
(+27 files in other folders)
