[project]
name = "TripCok_models"
version = "0.1.1"
description = "Default template for PDM package"
authors = [
    {name = "NishNovae", email = "raecrowned@gmail.com"},
]
dependencies = [
    "requests>=2.32.3",
    "pandas>=2.2.3",
    "numpy>=2.1.3",
    "gensim>=4.3.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
alc = "tripcok_models.worker.ALC:main"

[tool.pdm]
packages = [{include = "src"}]
distribution = true
